分类子分类显示未解决

--- a/ZoDreamShop/ZoDreamShop.csproj
+++ b/ZoDreamShop/ZoDreamShop.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>NumberButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\ConverterHeler.cs" />
+    <Compile Include="Converters\ImageConverter.cs" />
     <Compile Include="Converters\PriceConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
