--- a/ZoDreamShop/ZoDreamShop.csproj
+++ b/ZoDreamShop/ZoDreamShop.csproj
@@ -133,6 +133,9 @@
     <Compile Include="Converters\ConverterHeler.cs" />
     <Compile Include="Converters\ImageConverter.cs" />
     <Compile Include="Converters\PriceConverter.cs" />
+    <Compile Include="Helpers\AppData.cs" />
+    <Compile Include="Helpers\Log.cs" />
+    <Compile Include="Helpers\Toast.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -142,6 +145,8 @@
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\IncrementalLoadingCollection.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\AuthorizeViewModel.cs" />
     <Compile Include="ViewModels\MemberViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="Views\AuthorizePage.xaml.cs">
@@ -195,6 +200,7 @@
     <Content Include="Assets\icon\collect2.png" />
     <Content Include="Assets\icon\comment-dots.png" />
     <Content Include="Assets\icon\ellipsis-h.png" />
+    <Content Include="Assets\icon\error.png" />
     <Content Include="Assets\icon\exchange.png" />
     <Content Include="Assets\icon\gift.png" />
     <Content Include="Assets\icon\github.png" />
@@ -206,6 +212,7 @@
     <Content Include="Assets\icon\icon_arrow.png" />
     <Content Include="Assets\icon\icon_loading.png" />
     <Content Include="Assets\icon\idcard.png" />
+    <Content Include="Assets\icon\info.png" />
     <Content Include="Assets\icon\invoice.png" />
     <Content Include="Assets\icon\kefufill.png" />
     <Content Include="Assets\icon\map-marker-alt.png" />
@@ -222,6 +229,7 @@
     <Content Include="Assets\icon\user.png" />
     <Content Include="Assets\icon\user_red.png" />
     <Content Include="Assets\icon\wallet.png" />
+    <Content Include="Assets\icon\warning.png" />
     <Content Include="Assets\icon\weibo.png" />
     <Content Include="Assets\icon\weixin.png" />
     <Content Include="Assets\icon\withdrawal.png" />
