--- a/ZoDreamShop/ZoDreamShop.csproj
+++ b/ZoDreamShop/ZoDreamShop.csproj
@@ -124,6 +124,9 @@
     <Compile Include="Controls\IconButton.xaml.cs">
       <DependentUpon>IconButton.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\TipMenuItem.xaml.cs">
+      <DependentUpon>TipMenuItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\IconMenuItem.xaml.cs">
       <DependentUpon>IconMenuItem.xaml</DependentUpon>
     </Compile>
@@ -132,6 +135,7 @@
     </Compile>
     <Compile Include="Converters\ConverterHeler.cs" />
     <Compile Include="Converters\ImageConverter.cs" />
+    <Compile Include="Converters\IconConverter.cs" />
     <Compile Include="Converters\PriceConverter.cs" />
     <Compile Include="Helpers\AppData.cs" />
     <Compile Include="Helpers\Log.cs" />
@@ -140,6 +144,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AccountCenterViewModel.cs" />
     <Compile Include="ViewModels\BindableBase.cs" />
     <Compile Include="ViewModels\CategoryViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
@@ -172,6 +177,9 @@
     </Compile>
     <Compile Include="Views\MemberPage.xaml.cs">
       <DependentUpon>MemberPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ProfilePage.xaml.cs">
+      <DependentUpon>ProfilePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ScanPage.xaml.cs">
       <DependentUpon>ScanPage.xaml</DependentUpon>
@@ -272,6 +280,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\TipMenuItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Controls\IconMenuItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -325,6 +337,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MemberPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ProfilePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
