--- a/ZoDreamModels/ZoDreamModels.csproj
+++ b/ZoDreamModels/ZoDreamModels.csproj
@@ -123,16 +123,25 @@
     <Compile Include="Ad.cs" />
     <Compile Include="Article.cs" />
     <Compile Include="ArticleCategory.cs" />
+    <Compile Include="Attribute.cs" />
+    <Compile Include="AttributeItem.cs" />
+    <Compile Include="Brand.cs" />
+    <Compile Include="CategorySimple.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="CheckIn.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="CommentCount.cs" />
+    <Compile Include="CommentTag.cs" />
     <Compile Include="Connect.cs" />
     <Compile Include="Coupon.cs" />
+    <Compile Include="Gallery.cs" />
     <Compile Include="HomeProduct.cs" />
     <Compile Include="InvoiceLog.cs" />
     <Compile Include="InvoiceTitle.cs" />
     <Compile Include="LoginForm.cs" />
     <Compile Include="LoginQr.cs" />
     <Compile Include="Paging.cs" />
+    <Compile Include="ProductSimple.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
